# virtualbow-eigen-benchmark

./: .gitignore  CMakeLists.txt  README.md
results/: .~lock.results.ods#  lshw.txt  output.txt  results.ods  results.txt
source/: assembly.cpp  assembly.hpp  benchmark.hpp  main.cpp  operations.hpp  types.hpp  utils.hpp
